# bm-teletext

./: .gitignore  README.md
bm-collector/: README.md  pyproject.toml
bm-collector/src/bm_collector/: config.py  db.py  main.py  stream.py
bm-collector/systemd/: bm-collector.service
bm-collector/tests/: test_db.py  test_filters.py  test_main.py  test_stream.py
collector/: README.md  pyproject.toml
collector/src/bm_teletext_collector/: __init__.py  config.py  db.py  filters.py  main.py  stream.py
collector/systemd/: bm-teletext-collector.service
collector/tests/: test_db.py  test_filters.py  test_stream.py
dmr-teletext/: README.md  pyproject.toml
dmr-teletext/src/dmr_teletext/: __init__.py  db.py  main.py  page_data.py  text_format.py
dmr-teletext/tests/: test_db.py  test_main.py  test_page_data.py  test_text_format.py
dmr-teletext/tests/fixtures/: dmr-example.ep1
