[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmr-teletext"
version = "0.1.0"
description = "DMR teletext page data generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
dmr-teletext-page-data = "dmr_teletext.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
